# acoustic-field-calculator

./: .gitignore  Cargo.toml  README.md  build.ps1  crates.js  search-index.js  settings.html  source-files.js
acoustic-field-calculator/: Cargo.toml  README.md
acoustic-field-calculator/assets/shaders/: cpressure.comp  cpressure_base.comp  power.comp  pressure.comp
acoustic-field-calculator/examples/: main.rs
acoustic-field-calculator/src/: lib.rs  prelude.rs
acoustic-field-calculator/src/accurate/: builder.rs  calculator_acc.rs  field_buffer.rs  mod.rs  system_acc.rs  traits.rs
acoustic-field-calculator/src/calculator/: builder.rs  cpu_calculator.rs  mod.rs  traits.rs
acoustic-field-calculator/src/core/: attenuation.rs  container.rs  mod.rs  sound_speed.rs  utils.rs
acoustic-field-calculator/src/core/wave_sources/: mod.rs  sphere_sources.rs  t4010a1.rs  traits.rs
acoustic-field-calculator/src/field/: builder.rs  complex_pressure_field.rs  mod.rs  power_field.rs  pressure_field.rs  traits.rs
acoustic-field-calculator/src/field_buffer/: complex_pressure_field.rs  mod.rs  power_field.rs  pressure_field.rs  traits.rs
acoustic-field-calculator/src/field_type/: complex_pressure_field.rs  power_field.rs  pressure_field.rs  traits.rs
acoustic-field-calculator/src/fmath/: exp.rs  mod.rs  simd_vec.rs  trigonometric.rs
acoustic-field-calculator/src/gpu/: gpu_cache.rs  gpu_calculator.rs  gpu_prelude.rs  mod.rs
acoustic-field-calculator/src/gpu/calculator/: builder.rs  gpu_calculator.rs  mod.rs
acoustic-field-calculator/src/gpu/field_buffer/: cpressure_field.rs  mod.rs  power_field.rs  pressure_field.rs  traits.rs
acoustic-field-calculator/src/gpu/observe_area/: mod.rs  traits.rs
acoustic-field-calculator/src/gpu/system/: mod.rs  traits.rs  uniform_medium.rs
acoustic-field-calculator/src/gpu/wave_sources/: mod.rs  sphere_sources.rs  t4010a1.rs  traits.rs
acoustic-field-calculator/src/medium/: mod.rs  traits.rs  uniform_medium.rs
acoustic-field-calculator/src/observe_area/: builder.rs  mod.rs  traits.rs
acoustic-field-calculator/src/observe_area/grid/: bounds.rs  builder.rs  dimension.rs  grid_area.rs  mod.rs
acoustic-field-calculator/src/observe_area/scatter/: builder.rs  mod.rs  scatter_area.rs
acoustic-field-calculator/src/system/: mod.rs  traits.rs  uniform_medium.rs
acoustic-field-optimizer/: Cargo.toml  README.md
acoustic-field-optimizer/examples/: foci.rs  simple.rs
acoustic-field-optimizer/src/: bessel.rs  focal_point.rs  lib.rs  traits.rs
acoustic-field-optimizer/src/multiple_foci/: macros.rs  mod.rs
acoustic-field-optimizer/src/multiple_foci/combination/: greedy.rs  mod.rs
acoustic-field-optimizer/src/multiple_foci/fft/: ifft.rs  mod.rs
acoustic-field-optimizer/src/multiple_foci/linear_synthesis/: gs.rs  gs_pat.rs  mod.rs  naive.rs
acoustic-field-optimizer/src/multiple_foci/matrix/: horn.rs  long.rs  mod.rs
capi/: Cargo.toml
capi/src/: calculator.rs  container.rs  field_buffer.rs  lib.rs  observe_area.rs  optimizer.rs  system.rs  type_inference_aux.rs
(+366 files in other folders)
