[package]
name = "acoustic-field-optimizer"
version = "0.6.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acoustic-field-calculator = {path="../acoustic-field-calculator"}
num = "0.3"
rand = "0.8.3"
nalgebra = "0.24.1"
image = "0.23"
rustfft = "5.0.1"

[dev-dependencies]
scarlet = "1"
walkdir = "2"
