[package]
name = "acoustic-field-optimizer"
version = "0.6.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acoustic-field-calculator = {path="../acoustic-field-calculator"}
num = "0.4.0"
rand = "0.8.3"
nalgebra = "0.27.1"
image = "0.23"
rustfft = "6.0.1"

[dev-dependencies]
scarlet = "1"
walkdir = "2"
